# spatial-audio

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  object-spatial-audio.cpp  real_output.jsonl  render_visual_stream.cpp  requirements.txt  sample_detections.json  socket-spatial-audio-live.cpp  socket_payload_parser.cpp  socket_payload_parser.h  spatial-audio-demo.cpp  synthetic_4objects.jsonl  synthetic_4objects_extreme.jsonl  synthetic_4objects_sequential.jsonl  synthetic_data.jsonl  synthetic_sequential.jsonl  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
assets/: README.md
assets/manifest/: assets.lock.json
cmake/: AddJsaExecutable.cmake  Dependencies.cmake  ProjectOptions.cmake
docs/architecture/: logical-workflow.md  socket-protocol-v1.md  system-overview.md
docs/development/: build-and-run.md  devcontainer.md  setup-linux.md  setup-macos.md
docs/migration/: old-to-new-commands.md
include/jsa/core/: math_coords.hpp  resource_locator.hpp  wav_io.hpp
include/jsa/protocol/: frame_2d_v1.hpp  frame_3d_v1.hpp  frame_json.hpp  frame_parser.hpp  frame_serializer.hpp  frame_v1.hpp
include/jsa/tracking/: tracker_2d.hpp  tracker_3d.hpp
scripts/: bootstrap_linux.sh  bootstrap_macos.sh  fetch_assets.sh  validate_assets_manifest.sh
src/apps/demo/: main.cpp
src/apps/live_receiver_2d/: main.cpp
src/apps/live_receiver_3d/: main.cpp
src/apps/object_simulator/: main.cpp
src/apps/offline_renderer/: main.cpp
src/apps/orbit_streamer/: main.cpp
src/apps/visual_monitor/: main.cpp
src/core/: math_coords.cpp  resource_locator.cpp  wav_io.cpp
src/protocol/: frame_json.cpp  frame_parser.cpp  frame_serializer.cpp
src/tracking/: tracker_2d.cpp  tracker_3d.cpp
tests/: math_coords_tests.cpp  protocol_frame_parser_tests.cpp  resource_locator_tests.cpp  wav_io_tests.cpp
